Small spacing fix

--- a/client/src/components/dashboard/workflows/workflow-header/workflow-heading.scss
+++ b/client/src/components/dashboard/workflows/workflow-header/workflow-heading.scss
@@ -12,7 +12,7 @@
             padding-right: 10px;
             min-width: 620px;
             .only-filter {
-                margin-left: 410px;
+                margin-left: 415px;
             }
         }
     }
